--- a/src/main/resources/assets/pixelcreate/lang/en_us.json
+++ b/src/main/resources/assets/pixelcreate/lang/en_us.json
@@ -3,11 +3,14 @@
   "item.pixelcreate.platinum_sheet": "Platinum Sheet",
   "item.pixelcreate.silver_sheet": "Silver Sheet",
   "item.pixelcreate.wooden_sheet": "Wooden Sheet",
-  
+
   "item.pixelcreate.incomplete_poke_ball": "Incomplete Poké Ball",
   "item.pixelcreate.incomplete_great_ball": "Incomplete Great Ball",
   "item.pixelcreate.incomplete_ultra_ball": "Incomplete Ultra Ball",
 
+  "item.pixelcreate.incomplete_ancient_poke_ball": "Incomplete Ancient Poké Ball",
+  "item.pixelcreate.incomplete_ancient_great_ball": "Incomplete Ancient Great Ball",
+  "item.pixelcreate.incomplete_ancient_ultra_ball": "Incomplete Ancient Ultra Ball",
   "itemGroup.pixelcreate": "PixelCreate",
 
   "pixelcreate.configuration.title": "PixelCreate Configs",
