--- a/src/main/resources/assets/pixelcreate/lang/en_us.json
+++ b/src/main/resources/assets/pixelcreate/lang/en_us.json
@@ -4,6 +4,15 @@
   "item.pixelcreate.silver_sheet": "Silver Sheet",
   "item.pixelcreate.wooden_sheet": "Wooden Sheet",
 
+  "item.pixelcreate.deepslate_chunk": "Deepslate Chunk",
+  "item.pixelcreate.raw_iron_chunk": "Raw Iron Chunk",
+  "item.pixelcreate.raw_copper_chunk": "Raw Copper Chunk",
+  "item.pixelcreate.raw_zinc_chunk": "Raw Zinc Chunk",
+  "item.pixelcreate.raw_aluminium_chunk": "Raw Aluminium Chunk",
+  "item.pixelcreate.raw_gold_chunk": "Raw Gold Chunk",
+  "item.pixelcreate.raw_silver_chunk": "Raw Silver Chunk",
+  "item.pixelcreate.raw_platinum_chunk": "Raw Platinum Chunk",
+
   "item.pixelcreate.incomplete_poke_ball": "Incomplete Poké Ball",
   "item.pixelcreate.incomplete_great_ball": "Incomplete Great Ball",
   "item.pixelcreate.incomplete_ultra_ball": "Incomplete Ultra Ball",
