Changed Aluminum to bauxite

--- a/src/main/resources/assets/pixelcreate/lang/en_us.json
+++ b/src/main/resources/assets/pixelcreate/lang/en_us.json
@@ -8,7 +8,7 @@
   "item.pixelcreate.raw_iron_chunk": "Raw Iron Chunk",
   "item.pixelcreate.raw_copper_chunk": "Raw Copper Chunk",
   "item.pixelcreate.raw_zinc_chunk": "Raw Zinc Chunk",
-  "item.pixelcreate.raw_aluminium_chunk": "Raw Aluminium Chunk",
+  "item.pixelcreate.raw_bauxite_chunk": "Raw Bauxite Chunk",
   "item.pixelcreate.raw_gold_chunk": "Raw Gold Chunk",
   "item.pixelcreate.raw_silver_chunk": "Raw Silver Chunk",
   "item.pixelcreate.raw_platinum_chunk": "Raw Platinum Chunk",
