Raw Iron Molten fluid

--- a/src/main/resources/assets/pixelcreate/lang/en_us.json
+++ b/src/main/resources/assets/pixelcreate/lang/en_us.json
@@ -13,6 +13,9 @@
   "item.pixelcreate.raw_silver_chunk": "Raw Silver Chunk",
   "item.pixelcreate.raw_platinum_chunk": "Raw Platinum Chunk",
 
+  "item.pixelcreate.raw_iron_molten_bucket": "Molten Raw Iron Bucket",
+  "block.pixelcreate.raw_iron_molten_block": "Molten Raw Iron",
+
   "item.pixelcreate.incomplete_poke_ball": "Incomplete Poké Ball",
   "item.pixelcreate.incomplete_great_ball": "Incomplete Great Ball",
   "item.pixelcreate.incomplete_ultra_ball": "Incomplete Ultra Ball",
