Rename Raw Iron Molten to Molten Iron

--- a/src/main/resources/assets/pixelcreate/lang/en_us.json
+++ b/src/main/resources/assets/pixelcreate/lang/en_us.json
@@ -13,8 +13,10 @@
   "item.pixelcreate.raw_silver_chunk": "Raw Silver Chunk",
   "item.pixelcreate.raw_platinum_chunk": "Raw Platinum Chunk",
 
-  "item.pixelcreate.raw_iron_molten_bucket": "Molten Raw Iron Bucket",
-  "block.pixelcreate.raw_iron_molten_block": "Molten Raw Iron",
+  "fluid.pixelcreate.molten_iron": "Molten Iron",
+  "fluid_type.pixelcreate.molten_iron": "Molten Iron",
+  "item.pixelcreate.molten_iron_bucket": "Molten Iron Bucket",
+  "block.pixelcreate.molten_iron_block": "Molten Iron",
 
   "item.pixelcreate.incomplete_poke_ball": "Incomplete Poké Ball",
   "item.pixelcreate.incomplete_great_ball": "Incomplete Great Ball",
